[package]
name = "souls"
version = "0.1.0"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[dependencies]
piston = "0.19.0"
pistoncore-sdl2_window = "0.25.0"
piston3d-gfx_voxel = "0.7.0"
gfx = "0.9.1"
gfx_device_gl = "0.8.2"
image = "0.6.1"
vecmath = "0.2.0"
camera_controllers = "0.11.0"
fps_counter = "0.2.0"
shader_version = "0.2.1"
